# workspace-agentic-benchmark

./: .gitignore  ARTICLE_DRAFT.md  ARTICLE_DRAFT_V2.md  ARTICLE_EN_V4.md  ARTICLE_VISION_V3.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  workspace-bench-example.yml
RFC/: README.md  template.md
docs/: index.html  naive-startup.html  report-madani.html  report-naive-startup.html
eval/: audit.py  report.py  score.py  weights.json
examples/: README.md  madani-audit.json  madani-live-iter39-audit.json  madani-live-iter39-score.json  madani-reference.md  madani-report.md  madani-score.json
examples/madani-v031/: audit.json  report.html  score.json
examples/madani-v032/: audit.json  report.html  score.json
examples/madani-v033/: audit.json  report.html  score.json
examples/madani-v034/: audit.json  report.html  score.json
examples/naive-startup/: README.md  audit.json  package.json  report.html  score.json
examples/naive-startup/docs/: notes.md
extensions/: 01-architecture-capability-decoupling.md  02-information-theory.md  03-causal-reasoning.md  04-adversarial-robustness.md  05-compositionality.md  06-temporal-coherence.md  07-embodied-awareness.md  08-knowledge-representation.md  09-resilience-partial-failure.md  10-index-density.md  11-meta-measurement.md  INDEX.md
pillars/: 01-context-memory.md  02-skill-tool.md  03-governance.md  04-auto-improvement.md  05-multi-agent-dpi.md  06-observability.md  07-credentials-security.md  08-portability.md  09-metacognition.md  10-reliability.md  11-human-in-the-loop.md  12-cost-performance.md
profiles/: README.md  enterprise-multi-tenant.yml  solo-operator-private-repo.yml  team-saas-production.yml
research/: SOURCES.md
submissions/: .gitkeep  README.md
submissions/madani-hq/: audit.json  metadata.yaml  report.md  score.json
submissions/template/: metadata.yaml.template
tests/: conftest.py  test_smoke.py
workspace_bench/: __init__.py  __main__.py  audit.py  cli.py  compare.py  data.py  extensions.py  html_report.py  i18n.py  info_theory.py  info_theory_advanced.py  onboarding.py  patterns.py  profiles.py  score.py  ui.py
(+12 files in other folders)
